chore: swagger 3.0 관련 의존성으로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
-    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
