Swagger 설정 및 API 명세 페이지 구현 closes #8 (#9)
* chore: swagger 관련 의존성 추가

* chore: swagger 3.0 관련 의존성으로 변경

* feat: SwaggerConfig 정의

* feat: Swagger 적용- OAuth 로그인 예시 API

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
